--- a/src/Profile/profile.css
+++ b/src/Profile/profile.css
@@ -15,6 +15,8 @@
   -ms-animation: fadein 0.5s; /* Internet Explorer */
   -o-animation: fadein 0.5s; /* Opera < 12.1 */
   animation: fadein 0.5s;
+  will-change: transform;      
+
 }
 
 .profile-image-cont,
